force-app/main/default/objects/CRMG_GTM__Custom_Object__c/CRMG_GTM__Custom_Object__c.object-meta.xml
<CustomObject>
    <label>Custom Object</label>
    <nameField>
        <label>Custom Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>