force-app/main/default/objects/CRMG_GTM__Custom_Object__c/fields/CRMG_GTM__Contact__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Test_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>