force-app/main/default/objects/CRMG_GTM__Custom_Object__c/listViews/CRMG_GTM__All.listView-meta.xml
<ListView>
    <fullName>CRMG_GTM__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>